Update nav styles

--- a/wrapper.html
+++ b/wrapper.html
@@ -800,8 +800,8 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 	}
 
 	.tf-logo.dtl-nav {
-		width: 90px;
-		height: auto;
+		background-size: 100%;
+		border: none;
 	}
 </style>
 
