Update nav styles

--- a/wrapper.html
+++ b/wrapper.html
@@ -458,7 +458,7 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 
 	{% endif %}
 	{% include "./language_picker.html" %}
-	<nav class="bg-white section padding-small width-full text-small" id="dtl-nav">
+	<nav class="section padding-small width-full text-small" id="dtl-nav">
 		<div class="section-inner">
 			<a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/">
 			</a>
@@ -775,6 +775,7 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 
 	button.submit {
 		background-color: black;
+		border: none;
 	}
 	
 	.text-blue {
