--- a/event_create.html
+++ b/event_create.html
@@ -1,6 +1,12 @@
 {% extends "./wrapper.html" %}
 {% load actionkit_tags %}
 {% block content %}
+<nav class="section padding-small width-full text-small bg-white" id="dtl-nav">
+  <div class="section-inner">
+    <a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/">
+    </a>
+  </div>
+</nav>
 
 <style>
 .en .text-style-parenthesis::before,
