--- a/survey.html
+++ b/survey.html
@@ -3,6 +3,12 @@
 {% block content %}
 
 <section id="action-lead" class="section action-lead width-narrow padding-large notch notch-down bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
+	<nav class="section padding-small width-full text-small bg-white" id="dtl-nav">
+		<div class="section-inner">
+			<a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/">
+			</a>
+		</div>
+	</nav>
 	<div class="section-inner">
 		<div id="action-header" class="">
 {% if page.custom_fields.page_pretitle %}
@@ -66,6 +72,9 @@
 </section>
 
 <style>
+	#action-title {
+		padding-top: 0;
+	}
 	label.ak-survey-radio-choice {
 		align-items: center;
 	}
