Add nav to other pages

--- a/signup.html
+++ b/signup.html
@@ -18,6 +18,13 @@
 	});
 </script>
 
+<nav class="section padding-small width-full text-small bg-white" id="dtl-nav">
+  <div class="section-inner">
+    <a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/">
+    </a>
+  </div>
+</nav>
+
 <section id="action-lead"
 	class="section action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% elif page.custom_fields.after_action_next_step == 'flow' %}blue_opaque-fade{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
