--- a/event_search.html
+++ b/event_search.html
@@ -101,6 +101,12 @@
   
   }
   </style>
+  <nav class="section padding-small width-full text-small" id="dtl-nav">
+    <div class="section-inner">
+      <a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/">
+      </a>
+    </div>
+  </nav>
   <div id="page-header" class="section width-normal padding-large text-center">
     <div class="section-inner">
   {% if page.custom_fields.page_pretitle %}
