Update nav styles

--- a/wrapper.html
+++ b/wrapper.html
@@ -791,8 +791,8 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 	}
 
 	.tf-logo.dtl-nav {
-		background: unset;
-		background-size: 100%;
+		background: url("https://payload-cms-dtl.onrender.com/api/media/file/DTL-Red.png") !important;
+		background-size: 100% !important;
 		border: none;
 	}
 </style>
