--- a/wrapper.html
+++ b/wrapper.html
@@ -795,6 +795,11 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 		background-size: 100% !important;
 		border: none;
 	}
+	#jump-to-form {
+		background-color: black;
+		color: white;
+		border-radius: 0;
+	}
 </style>
 
 </html><!-- one more test for cache awesomeness -->
