Update button styles

--- a/wrapper.html
+++ b/wrapper.html
@@ -795,7 +795,7 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 		background-size: 100% !important;
 		border: none;
 	}
-	#jump-to-form {
+	#jump-to-form, .ak-event-search {
 		background-color: black;
 		color: white;
 		border-radius: 0;
