Add more links to nav

--- a/event_create.html
+++ b/event_create.html
@@ -5,6 +5,20 @@
   <div class="section-inner">
     <a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/">
     </a>
+    <div class="display-flex">
+      <a href="https://drawtheline.world/#about">
+        ABOUT
+      </a>
+      <a href="https://drawtheline.world/#get-involved">
+        GET INVOLVED
+      </a>
+      <a href="https://drawtheline.world/#faq">
+        FAQ
+      </a>
+      <a href="https://drawtheline.world/#map">
+        JOIN US
+      </a>
+    </div>
   </div>
 </nav>
 
