add nav link styles

--- a/event_create.html
+++ b/event_create.html
@@ -2,10 +2,10 @@
 {% load actionkit_tags %}
 {% block content %}
 <nav class="section padding-small width-full text-small bg-white" id="dtl-nav">
-  <div class="section-inner">
+  <div class="section-inner dtl-nav-wrapper">
     <a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/">
     </a>
-    <div class="display-flex">
+    <div class="display-flex dtl-nav-items">
       <a href="https://drawtheline.world/#about">
         ABOUT
       </a>
