add nav link styles

--- a/event_create.html
+++ b/event_create.html
@@ -15,7 +15,7 @@
       <a href="https://drawtheline.world/#faq">
         FAQ
       </a>
-      <a href="https://drawtheline.world/#map">
+      <a class="dtl-btn" href="https://drawtheline.world/#map">
         JOIN US
       </a>
     </div>
