add nav link styles

--- a/wrapper.html
+++ b/wrapper.html
@@ -804,16 +804,17 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 	.dtl-nav-items {
 		display: flex;
 		margin-left: auto;
-		gap: 10px;
+		gap: 2rem;
+		align-items: center;
 	}
 	.dtl-nav-items a {
 		display: flex !important;
-		color: #17292e !important;
-		font-size: 1.4rem;
+		color: #364153 !important;
+		font-size: 1.4rem !important;
 	}
 	.dtl-nav-items a.dtl-btn {
 		background-color: #80ffb3;
-		padding: 1.5rem;
+		padding: 12px 24px;
 		color: black;
 	}
 	#jump-to-form, .ak-event-search {
