Add nav styles to other pages

--- a/event_search.html
+++ b/event_search.html
@@ -105,6 +105,20 @@
     <div class="section-inner">
       <a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/">
       </a>
+      <div class="display-flex dtl-nav-items">
+        <a href="https://drawtheline.world/#about">
+          ABOUT
+        </a>
+        <a href="https://drawtheline.world/#get-involved">
+          GET INVOLVED
+        </a>
+        <a href="https://drawtheline.world/#faq">
+          FAQ
+        </a>
+        <a class="dtl-btn" href="https://drawtheline.world/#map">
+          JOIN US
+        </a>
+      </div>  
     </div>
   </nav>
   <div id="page-header" class="section width-normal padding-large text-center">
