--- a/signup.html
+++ b/signup.html
@@ -22,6 +22,21 @@
   <div class="section-inner">
     <a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/">
     </a>
+    <div class="display-flex dtl-nav-items">
+      <a href="https://drawtheline.world/#about">
+        ABOUT
+      </a>
+      <a href="https://drawtheline.world/#get-involved">
+        GET INVOLVED
+      </a>
+      <a href="https://drawtheline.world/#faq">
+        FAQ
+      </a>
+      <a class="dtl-btn" href="https://drawtheline.world/#map">
+        JOIN US
+      </a>
+    </div>
+
   </div>
 </nav>
 
