Update border styles of nav links

--- a/wrapper.html
+++ b/wrapper.html
@@ -812,7 +812,7 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 		display: flex !important;
 		color: #364153 !important;
 		font-size: 1.4rem !important;
-		border: none;
+		border-bottom: none !important;
 	}
 	.dtl-nav-items a.dtl-btn {
 		background-color: #80ffb3;
