add missing class

--- a/event_search.html
+++ b/event_search.html
@@ -102,7 +102,7 @@
   }
   </style>
   <nav class="section padding-small width-full text-small" id="dtl-nav">
-    <div class="section-inner">
+    <div class="section-inner dtl-nav-wrapper">
       <a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/">
       </a>
       <div class="display-flex dtl-nav-items">
