--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
 </script>
 
 <nav class="section padding-small width-full text-small bg-white" id="dtl-nav">
-  <div class="section-inner">
+  <div class="section-inner dtl-nav-wrapper">
     <a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/">
     </a>
     <div class="display-flex dtl-nav-items">
