Add hover styles

--- a/wrapper.html
+++ b/wrapper.html
@@ -814,10 +814,18 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 		font-size: 1.4rem !important;
 		border-bottom: none !important;
 	}
+	.dtl-nav-items a:hover {
+		background: unset;
+		color: #ff4122;
+	}
 	.dtl-nav-items a.dtl-btn {
 		background-color: #80ffb3;
 		padding: 12px 24px;
 		color: black;
+	}
+	.dtl-nav-items a.dtl-btn:hover {
+		background-color: #00b872;
+		
 	}
 	#jump-to-form, .ak-event-search {
 		background-color: black;
