Add hover styles

--- a/wrapper.html
+++ b/wrapper.html
@@ -815,8 +815,8 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 		border-bottom: none !important;
 	}
 	.dtl-nav-items a:hover {
-		background: unset;
-		color: #ff4122;
+		background: unset !important;
+		color: #ff4122 !important;
 	}
 	.dtl-nav-items a.dtl-btn {
 		background-color: #80ffb3;
@@ -824,8 +824,7 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 		color: black;
 	}
 	.dtl-nav-items a.dtl-btn:hover {
-		background-color: #00b872;
-		
+		background-color: #00b872 !important;
 	}
 	#jump-to-form, .ak-event-search {
 		background-color: black;
