--- a/wrapper.html
+++ b/wrapper.html
@@ -825,6 +825,7 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 	}
 	.dtl-nav-items a.dtl-btn:hover {
 		background-color: #00b872 !important;
+		color: black !important;
 	}
 	#jump-to-form, .ak-event-search {
 		background-color: black;
