--- a/wrapper.html
+++ b/wrapper.html
@@ -740,7 +740,9 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 		background-size: 100%;
 		height: 60px;
 		width: 60px;
-		
+	}
+	#footer-logo {
+		background-image: url("https://payload-cms-dtl.onrender.com/api/media/file/DTL-Black.png") !important;
 	}
 	
 	.bg-white .tf-logo {
