--- a/survey.html
+++ b/survey.html
@@ -152,6 +152,14 @@
 	#action-lead {
 		padding-top: 0;
 	}
+
+	.bg-orange-fade {
+		background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.95) 500px, rgba(255, 255, 255, 0.95) 100%);
+	}
+	#site-footer {
+		background-color: #ff4122;
+	}
+
 	@media screen and (min-width: 720px) {
 		.form-style-expanded .survey-q-vertical-spacing:not(:first-child),
 		.form-style-expanded .survey-q-vertical-spacing:not(:first-child).input-checkbox {
