--- a/wrapper.html
+++ b/wrapper.html
@@ -813,7 +813,7 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 	.dtl-nav-items a {
 		display: flex !important;
 		color: #364153 !important;
-		font-size: 1.4rem !important;
+		font-size: 18px !important;
 		border-bottom: none !important;
 	}
 	.dtl-nav-items a:hover {
