--- a/event_search.html
+++ b/event_search.html
@@ -52,6 +52,10 @@
   #event-search-country-wrapper select{
   }
 
+  body {
+    background-color: white !important;
+  }
+
   @media screen and (max-width:768px){
     li.event:nth-child(odd) > a.event-link {
       box-shadow: 0 0 0 10px rgba(0,0,0,0.05);
