--- a/event_search.html
+++ b/event_search.html
@@ -56,6 +56,10 @@
     background-color: white !important;
   }
 
+  footer {
+    background-color: #ff4122;
+  }
+
   @media screen and (max-width:768px){
     li.event:nth-child(odd) > a.event-link {
       box-shadow: 0 0 0 10px rgba(0,0,0,0.05);
