--- a/wrapper.html
+++ b/wrapper.html
@@ -734,7 +734,7 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 	}
 	
 	.tf-logo {
-		background-image: url("https://payload-cms-dtl.onrender.com/api/media/file/DTL-Red.png") !important;
+		background-image: url("{% filter ak_text:'dtl_nav_logo_url' %}https://payload-cms-dtl.onrender.com/api/media/file/DTL-Red.png{% endfilter %}") !important;
 		background-size: 100%;
 		height: 60px;
 		width: 60px;
