Update size of nav logo

--- a/wrapper.html
+++ b/wrapper.html
@@ -736,8 +736,8 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 	.tf-logo {
 		background-image: url("{% filter ak_text:'dtl_nav_logo_url' %}https://payload-cms-dtl.onrender.com/api/media/file/DTL-Red.png{% endfilter %}") !important;
 		background-size: 100%;
-		height: 60px;
-		width: 60px;
+		height: 100%;
+		width: 80px;
 	}
 	#footer-logo {
 		background-image: url("{% filter ak_text:'dtl_footer_logo_url' %}https://payload-cms-dtl.onrender.com/api/media/file/DTL-Black.png{% endfilter %}") !important;
@@ -745,8 +745,8 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 	
 	.bg-white .tf-logo {
 		background-color: transparent;
-		height: 60px;
-		width: 60px;
+		height: 100%;
+		width: 80px;
 	}
 	
 	.bg-dtl-red, .bg-ltgray {
