--- a/survey.html
+++ b/survey.html
@@ -9,7 +9,7 @@
 			</a>
 			<div class="display-flex dtl-nav-items">
 				<a href="https://drawtheline.world/#about" style="text-transform: uppercase;">
-					{% filter ak_text:"footer_about" %}ABOUT{% endfilter %}
+					{% filter ak_text:"dtl_nav_about" %}ABOUT{% endfilter %}
 				</a>
 				<a href="https://drawtheline.world/#get-involved" style="text-transform: uppercase;">
 					{% filter ak_text:"dtl_nav_get_involved" %}GET INVOLVED{% endfilter %}
