Add mobile nav styles

--- a/wrapper.html
+++ b/wrapper.html
@@ -843,6 +843,10 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 		.dtl-nav-items a:first-child {
 			margin-left: 0.5rem;
 		}
+		.dtl-nav-wrapper {
+			flex-wrap: wrap;
+			justify-content: center;
+		}
 	}
 </style>
 
