Attempt to add mobile nav to survey

--- a/survey.html
+++ b/survey.html
@@ -23,7 +23,7 @@
 			</div>	
 		</div>
 		<button
-			class="lg:hidden flex items-center ml-2"
+			class="desktop-hide flex items-center ml-2"
 			id="mobile-menu-toggle"
 			aria-label="Toggle Menu"
 			onclick="document.getElementById('mobile-menu').classList.toggle('translate-x-full');document.getElementById('mobile-menu').classList.toggle('translate-x-0');"
@@ -35,6 +35,7 @@
 				fill="none"
 				viewBox="0 0 24 24"
 				stroke="currentColor"
+				style="width: 30px;"
 			>
 				<path
 					stroke-linecap="round"
@@ -44,7 +45,7 @@
 			</svg>
 		</button>
 	</nav>
-	<div class="lg:hidden fixed inset-0 bg-white z-40 transition-all duration-300 transform translate-x-full desktop-hide" id="mobile-menu">
+	<div class="fixed inset-0 bg-white z-40 transition-all duration-300 transform translate-x-full desktop-hide" id="mobile-menu">
     <!-- Close button -->
 		<button class="absolute top-6 right-6 text-black p-2 rounded-full hover:bg-gray-100 transition" id="mobile-menu-close" aria-label="Close menu" type="button" onclick="document.getElementById('mobile-menu').classList.add('translate-x-full');document.getElementById('mobile-menu').classList.remove('translate-x-0');">
 			<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
