Add styles for mobile nav

--- a/survey.html
+++ b/survey.html
@@ -48,7 +48,8 @@
 	<div class="fixed inset-0 bg-white z-40 transition-all duration-300 transform translate-x-full desktop-hide" id="mobile-menu">
     <!-- Close button -->
 		<button class="absolute top-6 right-6 text-black p-2 rounded-full hover:bg-gray-100 transition" id="mobile-menu-close" aria-label="Close menu" type="button" onclick="document.getElementById('mobile-menu').classList.add('translate-x-full');document.getElementById('mobile-menu').classList.remove('translate-x-0');">
-			<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+			<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+				style="width:2rem;height:2rem;">
 				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
 			</svg>
 		</button>
