--- a/wrapper.html
+++ b/wrapper.html
@@ -833,6 +833,45 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 		border-radius: 0;
 	}
 
+	#mobile-menu {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+    top: 0;
+    left: 0;
+	}
+
+	#mobile-menu a.dtl-btn {
+		background-color: #80ffb3;
+		padding: 12px 24px;
+		color: black;
+	}
+
+	#mobile-menu-close {
+		background: none;
+    border: none;
+    right: 0;
+    position: absolute;
+	}
+
+	#mobile-menu nav {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		height: 100%;
+		justify-content: center;
+		gap: 1rem;
+	}
+
+	.translate-x-full {
+		translate: 100%;
+	}
+
+	.translate-x-0 {
+		translate: 0;
+	}
+
 	@media screen and (max-width:1024px) {
 		.dtl-nav-items {
 			gap: 0.5rem;
