Add styles for mobile nav

--- a/survey.html
+++ b/survey.html
@@ -22,10 +22,11 @@
 				</a>
 			</div>
 			<button
-				class="desktop-hide flex items-center ml-2"
+				class="desktop-hide"
 				id="mobile-menu-toggle"
 				aria-label="Toggle Menu"
 				onclick="document.getElementById('mobile-menu').classList.toggle('translate-x-full');document.getElementById('mobile-menu').classList.toggle('translate-x-0');"
+				style="background: none; border: none; margin-left: auto;"
 			>
 				<svg
 					id="hamburger-open"
@@ -33,7 +34,7 @@
 					fill="none"
 					viewBox="0 0 24 24"
 					stroke="currentColor"
-					style="width: 30px; background: none; border: none;"
+					style="width: 30px;"
 				>
 					<path
 						stroke-linecap="round"
