Add mobile menu to other pages

--- a/event_create.html
+++ b/event_create.html
@@ -18,10 +18,55 @@
       <a class="dtl-btn" href="https://drawtheline.world/#map" style="text-transform: uppercase;">
         {% filter ak_text:"dtl_nav_join_us" %}JOIN US{% endfilter %}
       </a>
-  </div>
+    </div>
+    <button
+      class="desktop-hide"
+      id="mobile-menu-toggle"
+      aria-label="Toggle Menu"
+      onclick="document.getElementById('mobile-menu').classList.toggle('translate-x-full');document.getElementById('mobile-menu').classList.toggle('translate-x-0');"
+      style="background: none; border: none; margin-left: auto;"
+    >
+      <svg
+        id="hamburger-open"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke="currentColor"
+        style="width: 30px;"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M4 6h16M4 12h16M4 18h16"></path>
+      </svg>
+    </button>
   </div>
 </nav>
-
+<div class="fixed inset-0 bg-white z-40 transition-all duration-300 transform translate-x-full desktop-hide" id="mobile-menu">
+  <!-- Close button -->
+  <button class="absolute top-6 right-6 text-black p-2 rounded-full hover:bg-gray-100 transition" id="mobile-menu-close" aria-label="Close menu" type="button" onclick="document.getElementById('mobile-menu').classList.add('translate-x-full');document.getElementById('mobile-menu').classList.remove('translate-x-0');">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+      style="width:2rem;height:2rem;">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+    </svg>
+  </button>
+  <!-- Mobile Nav Items -->
+  <nav class="flex flex-col items-center space-y-6 w-full">
+    <a href="https://drawtheline.world/#about" style="text-transform: uppercase;">
+      {% filter ak_text:"dtl_nav_about" %}ABOUT{% endfilter %}
+    </a>
+    <a href="https://drawtheline.world/#get-involved" style="text-transform: uppercase;">
+      {% filter ak_text:"dtl_nav_get_involved" %}GET INVOLVED{% endfilter %}
+    </a>
+    <a href="https://drawtheline.world/#faq" style="text-transform: uppercase;">
+      {% filter ak_text:"dtl_nav_faq" %}FAQ{% endfilter %}
+    </a>
+    <a class="dtl-btn" href="https://drawtheline.world/#map" style="text-transform: uppercase;">
+      {% filter ak_text:"dtl_nav_join_us" %}JOIN US{% endfilter %}
+    </a>
+  </nav>
+</div>
 <style>
 .en .text-style-parenthesis::before,
 .es .text-style-parenthesis::before,
