Add mobile menu to other pages

--- a/event_create.html
+++ b/event_create.html
@@ -5,7 +5,7 @@
   <div class="section-inner dtl-nav-wrapper">
     <a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/">
     </a>
-    <div class="display-flex dtl-nav-items">
+    <div class="display-flex dtl-nav-items mobile-hide tablet-hide">
       <a href="https://drawtheline.world/#about" style="text-transform: uppercase;">
         {% filter ak_text:"dtl_nav_about" %}ABOUT{% endfilter %}
       </a>
