--- a/event_create.html
+++ b/event_create.html
@@ -3,8 +3,7 @@
 {% block content %}
 <nav class="section padding-small width-full text-small bg-white" id="dtl-nav">
   <div class="section-inner dtl-nav-wrapper">
-    <a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/">
-    </a>
+    <a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/"></a>
     <div class="display-flex dtl-nav-items mobile-hide tablet-hide">
       <a href="https://drawtheline.world/#about" style="text-transform: uppercase;">
         {% filter ak_text:"dtl_nav_about" %}ABOUT{% endfilter %}
