--- a/survey.html
+++ b/survey.html
@@ -5,8 +5,7 @@
 <section id="action-lead" class="section action-lead width-narrow padding-large notch notch-down bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<nav class="section padding-small width-full text-small" id="dtl-nav">
 		<div class="section-inner dtl-nav-wrapper">
-			<a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/">
-			</a>
+			<a class="tf-logo dtl-nav text-large3" href="https://drawtheline.world/"></a>
 			<div class="display-flex dtl-nav-items mobile-hide tablet-hide">
 				<a href="https://drawtheline.world/#about" style="text-transform: uppercase;">
 					{% filter ak_text:"dtl_nav_about" %}ABOUT{% endfilter %}
