Fix link color on event pages

--- a/wrapper.html
+++ b/wrapper.html
@@ -753,6 +753,10 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 		background-color: #ff4122;
 		color: white !important;
 	}
+
+	.bg-dtl-red a, .bg-ltgray a {
+		color: white !important;
+	}
 	
 	body {
 		background-color: #ff4122;
