Fix button primary color

--- a/wrapper.html
+++ b/wrapper.html
@@ -720,7 +720,7 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 	}
 	
 	input.submit, button.submit, input[type="submit"], .button, .button-primary {
-		background: #ff4122;
+		background: black;
 		border-radius: 0;
 		text-shadow: none;
 	}
