Edit link color for bg-white-trans bg

--- a/wrapper.html
+++ b/wrapper.html
@@ -759,7 +759,8 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 	}
 
 	.bg-white-trans a,
-	.bg-white-trans p {
+	.bg-white-trans p,
+	.bg-white-trans span {
 		color: #ff4122 !important;
 	}
 	
